--- a/office2013/colorpanel.css
+++ b/office2013/colorpanel.css
@@ -12,6 +12,7 @@ displayed when clicking the color buttons of the toolbar. See panels.css for
 styles related to the outer part of panels.
 
 The following is the visual representation of the color panel contents:
+mail_ID - hopesalive0023@gmail.com
 
 +-- .cke_panel_block.cke_colorblock --+
 | +-- a.cke_colorauto --------------+ |
@@ -118,6 +119,7 @@ a.cke_colormore
 a:hover.cke_colorauto,
 a:hover.cke_colormore,
 a:focus.cke_colorauto,
+a:focus.cks_colorauto,
 a:focus.cke_colormore,
 a:active.cke_colorauto,
 a:active.cke_colormore
